--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "advanced-programming"]
 	path = advanced-programming
 	url = https://github.com/agnoam/hit-advanced-programming.git
+[submodule "hit-advanced-programming"]
+	path = hit-advanced-programming
+	url = https://github.com/agnoam/hit-advanced-programming
+	branch = master
