Updated submodules reference

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,8 @@
 [submodule "basic-computer-science"]
 	path = basic-computer-science
 	url = https://github.com/agnoam/hit-basic-computer-science.git
+	branch = master
 [submodule "advanced-programming"]
 	path = advanced-programming
 	url = https://github.com/agnoam/hit-advanced-programming.git
-[submodule "hit-advanced-programming"]
-	path = hit-advanced-programming
-	url = https://github.com/agnoam/hit-advanced-programming
 	branch = master
